[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ovam"
description = "Open-Vocabulary Attention Maps with Token Optimization for Semantic Segmentation in Diffusion Models"
requires-python = ">=3.8"
license = {text = "MIT"}
dynamic = ["version", "readme"]
dependencies = [
    "diffusers==0.20.0",
    "torch",
    "transformers", 
    "accelerate",
    "scipy",
    "safetensors",
    "numpy",
    "matplotlib",
    "SimpleCRF"
]
authors = [
    {name="Pablo Marcos-Manchón", email="pmarcos@ub.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
homepage = "https://github.com/vpulab/ovam/"
repository = "https://github.com/vpulab/ovam/"


[tool.setuptools.packages.find]
include = ["ovam*"]

[tool.setuptools.dynamic]
version = {attr = "ovam.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
